# arg3dice

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README.md  arg3dice.pc.in  configure  configure.ac  dice.cpp  dice.h  dice_game.cpp  dice_game.h  docker-compose.yml  package.json  premake4.lua
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: dice.cpp.func-sort-c.html  dice.cpp.func.html  dice.cpp.gcov.html  dice_game.cpp.func-sort-c.html  dice_game.cpp.func.html  dice_game.cpp.gcov.html  dice_game.h.func-sort-c.html  dice_game.h.func.html  dice_game.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html
coverage/src/yacht/: engine.cpp.func-sort-c.html  engine.cpp.func.html  engine.cpp.gcov.html  engine.h.func-sort-c.html  engine.h.func.html  engine.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  player.cpp.func-sort-c.html  player.cpp.func.html  player.cpp.gcov.html  scoresheet.cpp.func-sort-c.html  scoresheet.cpp.func.html  scoresheet.cpp.gcov.html
coverage/src/yaht/: engine.cpp.func-sort-c.html  engine.cpp.func.html  engine.cpp.gcov.html  engine.h.func-sort-c.html  engine.h.func.html  engine.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  player.cpp.func-sort-c.html  player.cpp.func.html  player.cpp.gcov.html  scoresheet.cpp.func-sort-c.html  scoresheet.cpp.func.html  scoresheet.cpp.gcov.html
src/: CMakeLists.txt  Makefile.am  Makefile.in  config.h.in  dice.cpp  dice.h  dice_game.cpp  dice_game.h
src/yacht/: Makefile.am  Makefile.in  engine.cpp  engine.h  player.cpp  player.h
src/yaht/: constants.h  engine.cpp  engine.h  game.cpp  game.h  player.cpp  player.h  scoresheet.cpp  scoresheet.h
tests/: CMakeLists.txt  Makefile.am  Makefile.in  dice.test.cpp  dice.test.h  main.test.cpp
tests/yacht/: Makefile.am  Makefile.in  engine.test.cpp  player.test.cpp  scoresheet.test.cpp
tests/yaht/: engine.test.cpp  game.test.cpp  player.test.cpp  scoresheet.test.cpp  yaht.test.h
yacht/: engine.test.cpp  player.cpp  player.h  scoresheet.cpp  scoresheet.h  scoresheet.test.cpp
