AUTOMAKE_OPTIONS = subdir-objects

lib_LTLIBRARIES = libarg3dice-0.2.la

libarg3dice_0_2_la_SOURCES = dice.cpp dice_game.cpp yacht/engine.cpp yacht/player.cpp yacht/scoresheet.cpp

libarg3dice_0_2_la_CXXFLAGS = $(LIBARG3DICE_0_2_LA_CXXFLAGS) $(COVERAGE_CFLAGS)

pkginclude_HEADERS = dice.h dice_game.h yacht/constants.h yacht/engine.h yacht/player.h yacht/scoresheet.h
